--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -12,7 +12,7 @@
         <h3><%= render 'luv_form' if current_fan %></h3>
       </div>
 
-      <p class="artist-detail"><%= @artist.description %></p>
+      <p class="artist-description"><%= @artist.description %></p>
 
       <%= link_to image_tag("http://linkmaker.itunes.apple.com/images/badges/en-us/badge_music-lrg.svg"), ItunesSearchController.search(@artist.name), alt: 'Search artist on Apple Music', margin: 0 %>
 
@@ -87,7 +87,7 @@
       <hr>
       <h4>April 9, 2016 / / Detroit, MI</h4>
 
-      <p><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></p>
+      <p class="tourdates"><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></p>
 
       <a class="btn ticket-btn" href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a>
 
@@ -97,15 +97,15 @@
       <br>
       <h3>Upcoming Stops</h3>
       <hr>
-      <p>March 26, 2016 / / Dubai, United Arab Emerates</P>
+      <p class="tourdates">March 26, 2016 / / Dubai, United Arab Emerates</P>
         <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
-      <p>March 30, 2016 / / Birmingham, United Kingdom</P>
+      <p class="tourdates">March 30, 2016 / / Birmingham, United Kingdom</P>
         <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
-      <p>March 31, 2016 / / London, United Kingdom</P>
+      <p class="tourdates">March 31, 2016 / / London, United Kingdom</P>
         <p class="venue">The O2 | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
-      <p>April 2, 2016 / / Dublin, Ireland</P>
+      <p class="tourdates">April 2, 2016 / / Dublin, Ireland</P>
         <p class="venue">3Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
-      <p>April 4, 2016 / / Glasgow, United Kingdom</P>
+      <p class="tourdates">April 4, 2016 / / Glasgow, United Kingdom</P>
         <p class="venue">The SSE Hydro | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
 
     </div>
