--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,7 @@ h4,
   margin: 0px;
   line-height: 1.5;
   font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 
 h4 a:hover {
@@ -92,6 +93,19 @@ p a:hover {
   text-align: center;
 }
 
+.container-full.subhead h2 {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
+  height: 100px;
+  line-height: 100px;
+  white-space: nowrap;
+}
+
 .brand {
   font-size: 200%;
   margin: 1em;
@@ -100,8 +114,23 @@ p a:hover {
   white-space: nowrap;
 }
 
+.trending {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
+  height: 100px;
+  line-height: 100px;
+  white-space: nowrap;
+  background-color: #ff8d8d;
+  color: white;
+  margin: -20px -15px -20px -15px;
+}
+
 .footer-mid {
-  /*margin: 1em;*/
   height: 100px;
   line-height: 100px;
   white-space: nowrap;
@@ -110,16 +139,31 @@ p a:hover {
 }
 
 .flfooter {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
+
   background-color: #5AFFAD;
   min-height: 100px;
   color: white;
   font-size: 100%;
   letter-spacing: 4px;
   vertical-align: middle;
-  margin-top: 1em;
+  margin-top: -1em;
 }
 
 .social {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
   color: white;
   padding: 2em;
 }
@@ -173,6 +217,13 @@ a.artist-name:hover {
 }
 
 .artist-title {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
   text-transform: uppercase;
   font-size: 300%;
   line-height: 1.1em;
@@ -184,8 +235,6 @@ a.artist-name:hover {
   font-style: normal;
   font-weight: 300;
   font-size: 18px;
-  text-transform: none;
-  text-decoration: none;
   letter-spacing: 0em;
   word-spacing: 0em;
   line-height: 1.4;
@@ -297,7 +346,7 @@ p.filterby {
 .note h4 {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 20px;
   letter-spacing: 0em;
   word-spacing: 0em;
@@ -333,9 +382,15 @@ a.note_rm {
 }
 
 .btn {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
   color: white;
   text-transform: uppercase;
-  font-size: 150%;
   background-color: #4A4A4A;
   border-radius: 0;
   border: none;
@@ -359,7 +414,15 @@ input.btn:hover {
 }
 
 .btn.ticket-btn {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
   color: white;
+  text-transform: uppercase;
   background-color: #4A4A4A;
 }
 
@@ -370,15 +433,24 @@ input.btn:hover {
 }
 
 .btn-more {
-  color: white;
-  text-transform: uppercase;
-  font-size: 150%;
   background-color: #4A4A4A;
   border-radius: 0;
   border: none;
-  margin: 1em 0.75em;
+  margin: 1em .75em;
   padding: 20px;
   text-align: center;
+}
+
+p.btn-more {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
+  color: white;
+  text-transform: uppercase;
 }
 
 .calbox {
