--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
             <%= link_to 'Register as an Artist', new_artist_path %>
           </div>
 
-          <div class="col-md-4 col-xs-12 social text-center">
+          <div class="col-md-4 col-xs-12 text-center social">
             <p><a href="#">twitter <i class="fa fa-twitter"></i></a></p>
             <p><a href="#">facebook <i class="fa fa-facebook"></i></a></p>
             <p><a href="#">instagram <i class="fa fa-instagram"></i></a></p>
