--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -24,7 +24,7 @@
   <br>
 </div>
 
-<div class="container-full subhead">
+<div class="container-full subhead-home">
   <div class="row">
     <h2>LOVED ARTISTS</h2>
   </div>
