Various styling updates

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,6 +151,7 @@ p a:hover {
   white-space: nowrap;
   text-align: center;
   letter-spacing: normal;
+  color: #4A4A4A;
 }
 
 .flfooter {
@@ -161,12 +162,12 @@ p a:hover {
   letter-spacing: 0em;
   word-spacing: 0em;
   line-height: 1.4;
-  background-color: #5AFFAD;
+  background-color: #5AADFF;
   min-height: 100px;
   color: white;
   font-size: 100%;
   letter-spacing: 4px;
-  margin-top: -1.0em;
+  /*margin-top: -1.0em;*/
 }
 
 .social {
@@ -223,6 +224,12 @@ p a:hover {
 
 .artist-container {
   height: 250px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.fan-container {
+  height: 150px;
   background-size: cover;
   background-repeat: no-repeat;
 }
