--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -36,28 +36,38 @@
   <div class="row">
     <div class="col-xs-12 col-md-12">
 
-        <div class="col-xs-6 col-md-3" style="padding-top:1em">
+
+      <% 4.times do %>
+
+      <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= @artist.image_url %>);background-size:cover;">
+      </div>
+
+      <% end %>
+
+
+
+        <!-- <div class="col-xs-6 col-md-3" style="padding-top:1em">
           <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/albums/rihanna_anti.jpg">
         </div>
         <div class="col-xs-6 col-md-3" style="padding-top:1em">
-        <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/albums/rihanna_unapologetic.jpg">
+          <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/albums/rihanna_unapologetic.jpg">
         </div>
         <div class="col-xs-6 col-md-3" style="padding-top:1em">
           <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/albums/rihanna_loud.jpg">
         </div>
         <div class="col-xs-6 col-md-3" style="padding-top:1em">
           <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/albums/rihanna_rated_r.jpg">
-        </div>
+        </div> -->
 
     </div>
   </div>
+</div>
 
   <div class="row">
     <div class="col-xs-12 col-md-12">
       <p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
     </div>
   </div>
-</div>
 
 
 <div class="container-full subhead">
@@ -212,16 +222,17 @@
   <div class="row">
     <div class="col-xs-12 col-md-12">
 
+
       <% 12.times do %>
 
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      <div class="col-xs-3 col-md-2 fan-container" style="background:url(<%= @artist.image_url %>);background-size:cover;">
       </div>
 
       <% end %>
 
     </div>
   </div>
+</div>
 
   <div class="row">
     <div class="col-xs-12 col-md-12">
@@ -231,7 +242,6 @@
 
   <br>
 
-</div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJkhQiESw05ouG4NPsr1ByVjBs46KOBLw&callback=initMap"
 async defer></script>
