--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -248,13 +248,12 @@ a.artist-name:hover {
   font-style: normal;
   font-weight: 300;
   font-size: 24px;
-  letter-spacing: 0em;
-  word-spacing: 0em;
   line-height: 1.4;
   text-transform: uppercase;
   font-size: 300%;
   line-height: 1.1em;
-  padding-bottom: 1em;
+  /*margin-bottom: 15px;*/
+  margin-left: -15px;
 }
 
 .artist-description {
@@ -267,6 +266,13 @@ a.artist-name:hover {
   line-height: 1.4;
   padding-bottom: 1em;
   color: black;
+  display:block;
+}
+
+.btn.luv_btn {
+  display:block;
+  font-size: 48px;
+  margin-bottom: 10px;
 }
 
 .tourdates {
