--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -60,9 +60,131 @@
           </div>
           <div class="col-xs-8" style="margin-bottom:1em;">
             <%= f.password_field :password_confirmation, :class => "form-control" %>
+            <hr>
           </div>
         </div>
 
+<!-- album 1 -->
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_1_title %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album1title, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_1_image_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album1image, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_1_itunes_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album1itunes, :class => "form-control" %>
+            <hr>
+          </div>
+        </div>
+
+<!-- album 2 -->
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_2_title %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album2title, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_2_image_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album2image, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_2_itunes_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album2itunes, :class => "form-control" %>
+            <hr>
+          </div>
+        </div>
+
+<!-- album 3 -->
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_3_title %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album3title, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_3_image_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album3image, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_3_itunes_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album3itunes, :class => "form-control" %>
+            <hr>
+          </div>
+        </div>
+
+<!-- album 4 -->
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_4_title %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album4title, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_4_image_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album4image, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :album_4_itunes_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :album4itunes, :class => "form-control" %>
+            <hr>
+          </div>
+        </div>
+
+<!-- submit -->
         <div class="text-right" style="margin:1em;">
           <%= f.submit "Update my account", class: "btn" %>
         </div>
