--- a/app/views/fans/show.html.erb
+++ b/app/views/fans/show.html.erb
@@ -10,15 +10,19 @@
       <div class="artist-title">
         <%= @fan.name %>
       </div>
-      <h3>Liked Artists</h3>
+      <h3>Luv'd Artists</h3>
     </div>
 
-    <div class="col-xs-4 col-md-3">
+    <!-- <div class="col-xs-4 col-md-3">
       <div style="position:relative; z-index:1">
       </div>
+    </div> -->
+
+    <% @fan.luvs.each do |luv| %>
+    <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= luv.artist.image_url %>);background-size:cover;">
+      <%= link_to luv.artist.name, luv.artist, :class => "artist-name force-to-bottom" %>
     </div>
-
-
+    <%end%>
 
     <!-- <div class="col-xs-4 col-md-3" style="padding-top:1em">
       <img class="img-responsive" src="http://placehold.it/1000x1000">
@@ -31,7 +35,7 @@
     </div>
     <div class="col-xs-4 col-md-3" style="padding-top:1em">
       <img class="img-responsive" src="http://placehold.it/1000x1000">
-    </div> -->
+    </div>  -->
 
   </div>
 </div>
@@ -41,5 +45,5 @@
 <% if current_fan == @fan %>
 <%= link_to 'Edit', edit_fan_path(@fan) %>
 <%= link_to 'Delete', @fan, method: :delete, data: { confirm: 'Are you sure?' } %>
-
+<%= link_to 'Find more Artists here', artists_path %>
 <% end %>
