--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -35,27 +35,31 @@
 
 <div class="container-fluid">
   <div class="row">
-    <!-- <div class="col-xs-12 col-md-12"> -->
+    <div class="col-xs-12 col-md-12">
 
       <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= @artist.album1image %>);background-size:cover;">
-        <%= link_to @artist.album1image, @artist.album1itunes, :class => "artist-name force-to-bottom" %>
+        <%= link_to @artist.album1title, "#{@artist.album1itunes}", :class => "artist-name force-to-bottom" %>
       </div>
 
-      <!-- ### Old placeholder album content ###
-
-      <%# 4.times do %>
-
-      <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= @artist.image_url %>);background-size:cover;">
+      <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= @artist.album2image %>);background-size:cover;">
+        <%= link_to @artist.album2title, "#{@artist.album2itunes}", :class => "artist-name force-to-bottom" %>
       </div>
 
-      <%# end %> -->
-    <!-- </div> -->
+      <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= @artist.album3image %>);background-size:cover;">
+        <%= link_to @artist.album3title, "#{@artist.album3itunes}", :class => "artist-name force-to-bottom" %>
+      </div>
+
+      <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= @artist.album4image %>);background-size:cover;">
+        <%= link_to @artist.album4title, "#{@artist.album4itunes}", :class => "artist-name force-to-bottom" %>
+      </div>
+
+    </div>
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12 col-md-12">
-    <p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
+    <p class="btn-more"><a href="#">MORE <i class="fa fa-caret-square-o-right"></i></i></a></p>
   </div>
 </div>
 
