--- a/app/views/fans/new.html.erb
+++ b/app/views/fans/new.html.erb
@@ -27,6 +27,15 @@
 
           <div class="form-group">
             <div class="col-xs-4 control-label">
+              <%= f.label :image_url %>
+            </div>
+            <div class="col-xs-8" style="margin-bottom:1em;">
+              <%= f.text_field :image_url, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-xs-4 control-label">
               <%= f.label :password %>
             </div>
             <div class="col-xs-8" style="margin-bottom:1em;">
