--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,28 +2,31 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-12 col-md-6">
-      <%= image_tag @artist.image_url, :class => "img-responsive" %>
-    </div>
+    <div class="col-xs-12 col-md-12">
 
-    <div class="col-xs-10 col-md-5 artist-title">
+      <div class="col-xs-12 col-md-6">
+        <%= image_tag @artist.image_url, :class => "img-responsive" %>
+      </div>
+
+      <div class="col-xs-12 col-md-6 artist-title">
         <%= @artist.name %>
+      </div>
+
+      <div class="col-xs-6 col-md-6">
+        <h3><%= render 'luv_form' if current_fan %></h3>
+      </div>
+
+      <p class="artist-description"><%= @artist.description %></p>
+
+      <p class="artist-description"><%= link_to image_tag("http://linkmaker.itunes.apple.com/images/badges/en-us/badge_music-lrg.svg"), ItunesSearchController.search(@artist.name), alt: 'Search artist on Apple Music', margin: 0 %></p>
+
+      <p>
+    		<% if current_artist == @artist %>
+    		<%= link_to 'Edit', edit_artist_path(@artist) %>
+    		<%= link_to 'Delete', @artist, method: :delete, data: { confirm: 'Are you sure?' } %>
+    		<% end %>
+      </p>
     </div>
-
-    <div class="col-xs-2 col-md-1">
-      <h3><%= render 'luv_form' if current_fan %></h3>
-    </div>
-
-    <p class="artist-description"><%= @artist.description %></p>
-
-    <%= link_to image_tag("http://linkmaker.itunes.apple.com/images/badges/en-us/badge_music-lrg.svg"), ItunesSearchController.search(@artist.name), alt: 'Search artist on Apple Music', margin: 0 %>
-
-    <p>
-		<% if current_artist == @artist %>
-		<td><%= link_to 'Edit', edit_artist_path(@artist) %></td>
-		<td><%= link_to 'Delete', @artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-		<% end %>
-    </p>
   </div>
 </div>
 
@@ -59,7 +62,7 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-12">
-    <p class="btn-more"><a href="#">MORE <i class="fa fa-caret-square-o-right"></i></i></a></p>
+    <p class="btn-more"><a href="#">MORE <i class="fa fa-caret-square-o-right"></i></p>
   </div>
 </div>
 
@@ -219,7 +222,7 @@
 
       <% @artist.luvs.each do |luv| %>
       <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= luv.fan.image_url %>);background-size:cover;">
-        <%= link_to luv.fan.name, luv.fan, :class => "fan-name force-to-bottom" %>
+        <%= link_to luv.fan.name, luv.fan, :class => "artist-name force-to-bottom" %>
       </div>
       <%end%>
 
@@ -227,14 +230,7 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-xs-12 col-md-12">
-    <p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
-  </div>
-</div>
-
 <br>
-
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJkhQiESw05ouG4NPsr1ByVjBs46KOBLw&callback=initMap"
 async defer></script>
