Misc style updates

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -234,6 +234,22 @@ p a:hover {
   background-repeat: no-repeat;
 }
 
+.fan-name {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  /*letter-spacing: 0em;
+  word-spacing: 0em;*/
+  text-transform: uppercase;
+  /*text-align: center;*/
+  display: inline-block;
+  width: 100%;
+  /*height: 75px;*/
+  line-height: 1.1em;
+  /*padding: 0.25em;*/
+}
+
 a.artist-name {
   color: white;
 }
@@ -289,7 +305,7 @@ a.artist-name:hover {
 }
 
 .img-responsive {
-  display: block;
+  display: inline-block;
   max-width: 100%;
   height: auto;
   margin: 0;
