--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -62,7 +62,7 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-12">
-    <p class="btn-more"><a href="#">MORE <i class="fa fa-caret-square-o-right"></i></p>
+    <p class="btn-more"><a href="#">MORE <i class="fa fa-caret-square-o-right"></i></a></p>
   </div>
 </div>
 
@@ -77,43 +77,42 @@
   <div class="row">
     <div class="col-xs-12 col-md-4">
       <div id="map"></div>
-        <script>
-          var map;
-          function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: 42.361239, lng: -83.06701},
-              zoom: 8
-            });
-          }
-        </script>
-      </div>
+      <script>
+        var map;
+        function initMap() {
+          map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: 42.361239, lng: -83.06701},
+            zoom: 8
+          });
+        }
+      </script>
+    </div>
 
-      <div class="col-xs-12 col-md-4">
-        <h3>Next Stop</h3>
-        <hr>
-        <h4>April 9, 2016 / / Detroit, MI</h4>
 
-        <p class="tourdates"><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></p>
+    <div class="col-xs-12 col-md-4">
+      <h3>Next Stop</h3>
+      <hr>
+      <h4>April 9, 2016 / / Detroit, MI</h4>
 
-        <a class="btn ticket-btn" href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a>
+      <p class="tourdates"><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></p>
 
-      </div>
+      <a class="btn ticket-btn" href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a>
 
-      <div class="col-xs-12 col-md-4">
-        <h3>Upcoming Stops</h3>
-        <hr>
-        <p class="tourdates">March 26, 2016 / / Dubai, United Arab Emerates</P>
-        <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
-        <p class="tourdates">March 30, 2016 / / Birmingham, United Kingdom</P>
-        <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
-        <p class="tourdates">March 31, 2016 / / London, United Kingdom</P>
-        <p class="venue">The O2 | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
-        <p class="tourdates">April 2, 2016 / / Dublin, Ireland</P>
-        <p class="venue">3Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
-        <p class="tourdates">April 4, 2016 / / Glasgow, United Kingdom</P>
-        <p class="venue">The SSE Hydro | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
+    </div>
 
-      </div>
+    <div class="col-xs-12 col-md-4">
+      <h3>Upcoming Stops</h3>
+      <hr>
+      <p class="tourdates">March 26, 2016 / / Dubai, United Arab Emerates</P>
+      <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
+      <p class="tourdates">March 30, 2016 / / Birmingham, United Kingdom</P>
+      <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
+      <p class="tourdates">March 31, 2016 / / London, United Kingdom</P>
+      <p class="venue">The O2 | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
+      <p class="tourdates">April 2, 2016 / / Dublin, Ireland</P>
+      <p class="venue">3Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
+      <p class="tourdates">April 4, 2016 / / Glasgow, United Kingdom</P>
+      <p class="venue">The SSE Hydro | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
     </div>
   </div>
 </div>
