--- a/app/views/fans/show.html.erb
+++ b/app/views/fans/show.html.erb
@@ -2,13 +2,26 @@
 
 <div class="container-fluid">
   <div class="row">
+
     <div class="col-xs-12 col-md-6">
       <%= image_tag @fan.image_url, :class => "img-responsive", :style => "margin-bottom:1em;" %>
     </div>
 
-    <div class="col-xs-12 col-md-6 artist-title">
+    <div class="col-xs-12 col-md-6 fan-name">
       <%= @fan.name %>
     </div>
+
+
+<div class="container-fluid">
+  <div class="row">
+
+      <div class="col-xs-12 col-md-6">
+        <%= image_tag @artist.image_url, :class => "img-responsive" %>
+      </div>
+
+      <div class="col-xs-12 col-md-6 artist-title">
+        <%= @artist.name %>
+      </div>
 
   </div>
 </div>
@@ -38,7 +51,6 @@
     </div>
   </div>
 </div>
-
 
 <% if current_fan == @fan %>
 <%= link_to 'Edit', edit_fan_path(@fan) %>
