Fan page styling updates

--- a/app/views/fans/index.html.erb
+++ b/app/views/fans/index.html.erb
@@ -19,7 +19,7 @@
 
       <div class="col-xs-4 col-md-2">
 
-      <%= link_to image_tag(fan.image_url, :class => "img-250"), fan  %>
+      <%= link_to image_tag(fan.image_url, :class => "img-responsive"), fan  %>
 
     <% end %>
 
