--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -239,15 +239,9 @@ p a:hover {
   font-style: normal;
   font-weight: 300;
   font-size: 24px;
-  /*letter-spacing: 0em;
-  word-spacing: 0em;*/
   text-transform: uppercase;
-  /*text-align: center;*/
   display: inline-block;
-  width: 100%;
-  /*height: 75px;*/
   line-height: 1.1em;
-  /*padding: 0.25em;*/
 }
 
 a.artist-name {
@@ -267,8 +261,6 @@ a.artist-name:hover {
   line-height: 1.4;
   text-transform: uppercase;
   line-height: 1.1em;
-  margin-top: 15px;
-  /*margin-left: -15px;*/
 }
 
 .artist-description {
@@ -282,13 +274,16 @@ a.artist-name:hover {
   padding-bottom: 1em;
   color: black;
   display:block;
-  padding: 15px;
+  /*padding: 15px;*/
 }
 
 .btn.luv_btn {
   display:block;
   font-size: 24px;
-  margin: 15px;
+  width: 100%;
+  letter-spacing: 1px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .tourdates {
@@ -474,7 +469,7 @@ input.btn:hover {
   background-color: #4A4A4A;
   border-radius: 0;
   border: none;
-  margin: 1em;
+  margin-top: 1em;
   padding: 20px;
   text-align: center;
 }
