--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,7 +109,7 @@ p a:hover {
 }
 
 .container-full.subhead-home {
-  margin-top: 2em;
+  margin-top: -2em;
   height: 100px;
   line-height: 100px;
   width: 100%;
@@ -238,10 +238,20 @@ p a:hover {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
-  font-size: 24px;
+  font-size: 36px;
   text-transform: uppercase;
   display: inline-block;
   line-height: 1.1em;
+}
+
+.edit-my-profile {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  display: inline-block;
+  line-height: 1.1em;
+  float:right;
 }
 
 a.artist-name {
@@ -483,13 +493,16 @@ input.btn:hover {
   color: white;
   text-transform: uppercase;
   background-color: #4A4A4A;
-  border-radius: 0;
-  border: none;
   margin-top: 1em;
   margin-bottom: 1em;
   padding: 20px;
   text-align: center;
   width: 100%
+}
+
+.btn-more-artists a:hover {
+  text-decoration: none;
+  background-color: inherit;
 }
 
 .btn-more-artists a {
