--- a/app/views/fans/edit.html.erb
+++ b/app/views/fans/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
-      <h1>Editing Fan</h1>
+      <h1>Edit Your Profile</h1>
       <hr>
     </div>
 
