fixed footer styling on mobile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,21 +39,18 @@
     <footer>
 
       <div class="container-full flfooter">
-        <div class="row">
-          <div class="col-md-4 col-xs-12 text-center">
-            <a class="brand" href="/">FAN<i class="fa fa-heart"></i></a>
+        <div class="row" style="padding-top:3em;">
+          <div class="col-md-4 col-xs-12 text-center brand">
+            <a href="/">FAN<i class="fa fa-heart"></i></a>
           </div>
 
-          <div class="col-md-4 col-xs-12 footer-mid">
-            <%= link_to 'Register as an Artist', new_artist_path %>
+          <div class="col-md-4 col-xs-12 footer-mid social">
+            <p><%= link_to 'Register as an Artist', new_artist_path %></p>
           </div>
 
           <div class="col-md-4 col-xs-12 text-center social">
-            <p><a href="#">twitter <i class="fa fa-twitter"></i></a></p>
-            <p><a href="#">facebook <i class="fa fa-facebook"></i></a></p>
-            <p><a href="#">instagram <i class="fa fa-instagram"></i></a></p>
+            <p><a href="#"><i class="fa fa-twitter"></i> twitter</a>  <a href="#"><i class="fa fa-facebook"></i> facebook</a> <a href="#"><i class="fa fa-instagram"></i> instagram</a></p>
           </div>
-
         </div>
       </div>
 
