--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -122,7 +122,7 @@
     </div>
 
     <div class="col-xs-6 col-md-3" style="padding-top:1em">
-      <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/merch/tshirt1.jpg">
+      <img class="img-responsive" src="#">
     </div>
     <div class="col-xs-6 col-md-3" style="padding-top:1em">
       <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/merch/tshirt2.jpg">
