--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
 
           <div class="col-md-4 col-xs-12 text-center social">
             <p><a href="#">twitter <i class="fa fa-twitter"></i></a></p>
-            <p><a href="#">facebook <i class="fa fa-facebook"></i></a></p>
+            <p><a href="https://www.facebook.com/thefanluv">facebook <i class="fa fa-facebook"></i></a></p>
             <p><a href="#">instagram <i class="fa fa-instagram"></i></a></p>
           </div>
 
