--- a/app/views/artists/_luv_form.html.erb
+++ b/app/views/artists/_luv_form.html.erb
@@ -1,5 +1,6 @@
-<%= form_for(current_fan.luvs.new) do |f| %>
+<%= form_for(current_fan.luvs.build) do |f| %>
  <%= f.hidden_field :luv, value: @artist.id %>
  <%= f.hidden_field :luvs, value: current_fan.id %>
  <%= f.submit "GIVE US SOME LUV ♥", class: "btn luv_btn" %>
+
 <% end %>
