--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,22 +17,25 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
+        <td><%# artist_id.name %></td>
         <td><%= product.title %></td>
         <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
+        <td><%= image_tag(product.image_url) %></td>
         <td><%= product.price %></td>
         <td><%= product.category %></td>
-        <% if current_fan == @fan %>
-        <td><%= link_to 'New Product', new_product_path %></td>
+        <% if current_artist %>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% else %>
+        <% end %>
+        <% if current_fan %>
         <td><%= link_to 'Show', product %></td>
         <td><a href="/cart/<%= product.id %>"> Add to cart </a></td>
-        <% end %>
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
-
+        <% if current_artist %>
+        <%= link_to 'New Product', new_product_path %>
+        <% end %>
 <br>
