--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,8 +11,7 @@
 </p>
 
 <p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
+  <%= image_tag(@product.image_url) %>
 </p>
 
 <p>
@@ -25,5 +24,10 @@
   <%= @product.category %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<% if current_fan %>
+<a href="/cart/<%= @product.id %>"> Add to cart </a>
+<% end %>
+
+<% if current_artist %>
+<%= link_to 'Edit', edit_product_path(@product) %> <% end %> <p>
+<%= link_to 'Back', products_path %></p>
