animated heart in logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <div class="navbar navbar-default navbar-static-top">
       <div class="container-full">
 
-        <a class="navbar-brand" href="/artists">FAN<i class="fa fa-heart"></i></a>
+        <a class="navbar-brand" href="/artists">FAN<i class="fa fa-heart animated infinite pulse"></i></a>
           <ul class="nav navright">
 
             <% if current_fan || current_artist %>
@@ -41,7 +41,7 @@
       <div class="container-full flfooter">
         <div class="row" style="padding-top:3em;">
           <div class="col-md-4 col-xs-12 text-center brand">
-            <a href="/">FAN<i class="fa fa-heart"></i></a>
+            <a href="/">FAN<i class="fa fa-heart animated infinite pulse"></i></a>
           </div>
 
           <div class="col-md-4 col-xs-12 footer-mid social">
