--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -143,7 +143,7 @@
     <div class="col-xs-6 col-md-3">
       <div class="note">
 
-        <h4>Madonna on Social Media – All the pictures and videos!</h4>
+        <h4>YOLO pop-up gastropub twee</h4>
         <p>Here's an overview of all the pictures and videos that have been posted on Madonna's official Instagram account and other social media. 10 March 2016 Clown Squad #tearsofaclown This Clown ... </p>
         <p><a class="note_rm" href="#">Read more <i class="fa fa-caret-right"></i></a></p>
 
@@ -153,8 +153,8 @@
     <div class="col-xs-6 col-md-3">
       <div class="note">
 
-        <h4>Madonna Mania is about to hit Melbourne on Friday March 11th</h4>
-        <p>Just Like A Prayer, Chapel Off Chapel will take you there… to celebrate the Queen of Pop’s arrival in Melbourne after 23 years with a pre-show party and everybody is invited!</p>
+        <h4>Brunch aesthetic next level banjo.</h4>
+        <p>Aesthetic bitters sustainable green juice. Artisan kogi vinyl banjo quinoa forage franzen kinfolk ethical try-hard, you probably haven't heard of them put a bird on it gastropub before they sold out. </p>
         <p><a class="note_rm" href="#">Read more <i class="fa fa-caret-right"></i></a></p>
 
       </div>
@@ -163,8 +163,8 @@
     <div class="col-xs-6 col-md-3">
       <div class="note">
 
-        <h4>Possible song choice for the unique MADONNA: TEARS OF A CLOWN fan show</h4>
-        <p>The unique fan show MADONNA: TEARS OF A CLOWN will fuse music, art and comedy tomorrow at Melbourne’s historic Forum Theatre! Madonna and her crew have been rehearsing for the past two days and here are some of the songs that were overheard by fans outside the venue…</p>
+        <h4>Messenger bag umami crucifix biodiesel</h4>
+        <p>Four dollar toast disrupt cold-pressed bespoke. Gochujang franzen tilde, gluten-free pop-up food truck sustainable asymmetrical shoreditch lo-fi try-hard trust fund biodiesel church-key raw denim. Meh beard jean shorts, gastropub quinoa viral heirloom.</p>
         <p><a class="note_rm" href="#">Read more <i class="fa fa-caret-right"></i></a></p>
 
       </div>
@@ -173,8 +173,8 @@
     <div class="col-xs-6 col-md-3">
       <div class="note">
 
-        <h4>Japanese MDNA Skin interview with Madonna about the secret of beauty</h4>
-        <p>BS Fuiji’s ANSWERS showed a new Madonna interview for the promotion of her skincare line, MDNA Skin, where Madonna talked about the creative process behind MDNA Skin and the secret of beauty!</p>
+        <h4>Keytar four loko tofu </h4>
+        <p>Celiac cronut tattooed selfies, gastropub photo booth fashion axe forage tacos gentrify tote bag ramps chia. Venmo intelligentsia street art taxidermy, readymade health goth microdosing plaid forage cliche.</p>
         <p><a class="note_rm" href="#">Read more <i class="fa fa-caret-right"></i></a></p>
 
       </div>
