--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -3,7 +3,7 @@
 <% if @cart.empty? %>
 	<p>Your cart is currently empty</p>
 <% else %>
-<%= link_to "Empty Cart", cart_clear_path %>
+  <%= link_to "Empty Cart", cart_clear_path %>
 <% end %>
 <br><br><br>
 
@@ -12,9 +12,9 @@
 <ul>
 <% @cart.each do | id, quantity | %>
   <% product = Product.find_by_id(id) %>
-
+	<% next if product.nil? %>
   <li>
-    <%= link_to product.title, product %>
+    <%= link_to product %>
     <p><%= product.description %></p>
     <p><%= number_to_currency(product.price, :unit => '$') %></p>
     <p>Quantity: <%= quantity%></p>
