--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -455,7 +455,9 @@ a.note_rm {
 }
 
 .btn a:focus,
-.btn a:hover {
+.btn a:hover,
+a.btn.btn-more-artists:hover,
+a.btn-more:hover {
   background-color: #eee;
   color: black;
   text-decoration: none;
@@ -486,16 +488,7 @@ input.btn:hover {
   text-decoration: none;
 }
 
-.btn-more {
-  background-color: #4A4A4A;
-  border-radius: 0;
-  border: none;
-  margin-top: 1em;
-  padding: 20px;
-  text-align: center;
-}
-
-.btn-more-artists {
+a.btn-more-artists {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
@@ -520,40 +513,33 @@ input.btn:hover {
   color: white;
 }
 
+p.btn-more, p.btn-more a {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
+  color: white;
+  text-transform: uppercase;
+}
+
 p.btn-more {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 18px;
-  letter-spacing: 0em;
-  word-spacing: 0em;
   line-height: 1.4;
   color: white;
   text-transform: uppercase;
-}
-
-a.btn-more {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 18px;
-  letter-spacing: 0em;
-  word-spacing: 0em;
-  line-height: 1.4;
-  color: white;
-  text-transform: uppercase;
-}
-
-p.btn-more a {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 18px;
-  letter-spacing: 0em;
-  word-spacing: 0em;
-  line-height: 1.4;
-  color: white;
-  text-transform: uppercase;
+  background-color: #4A4A4A;
+  border-radius: 0;
+  border: none;
+  margin-top: 1em;
+  padding: 20px;
+  text-align: center;
+  max-width: 100%;
 }
 
 #map {
