--- a/app/views/fans/show.html.erb
+++ b/app/views/fans/show.html.erb
@@ -9,8 +9,12 @@
     <div class="col-xs-12 col-md-6">
       <div class="artist-title">
         <%= @fan.name %>
-        <%= link_to 'Edit my profile', edit_fan_path(@fan), :class => "edit-my-profile" %> <br>
-        <%= link_to 'My Shopping Cart', cart_path, :class => "edit-my-profile" %>
+        <% if current_fan == @fan %>
+          <%= link_to 'Edit my profile', edit_fan_path(@fan), :class => "edit-my-profile" %> <br>
+          <%= link_to 'My Shopping Cart', cart_path, :class => "edit-my-profile" %>
+          <br>
+          <%= link_to 'Delete', @fan, :class => "edit-my-profile", method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% end %>
       </div>
     </div>
   </div>
@@ -22,22 +26,23 @@
   </div>
 </div>
 
-<% @fan.luvs.each do |luv| %>
-
-<div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= luv.artist.image_url %>);background-size:cover;">
-  <%= link_to luv.artist.name, luv.artist, :class => "artist-name force-to-bottom" %>
-</div>
-
-<%end%>
-
 <div class="container-fluid">
   <div class="row">
-    <%= link_to 'Find more Artists here', artists_path, :class => "btn btn-more-artists" %>
+    <div class="col-xs-12 col-md-12">
+
+      <% @fan.luvs.each do |luv| %>
+
+        <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= luv.artist.image_url %>);background-size:cover;">
+          <%= link_to luv.artist.name, luv.artist, :class => "artist-name force-to-bottom" %>
+        </div>
+
+      <%end%>
+
+      <%= link_to 'Find more Artists', artists_path, :class => "btn btn-more-artists" %>
+
+      <br>
+      <br>
+
+    </div>
   </div>
 </div>
-
-
-
-<% if current_fan == @fan %>
-<%= link_to 'Delete', @fan, method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
