--- a/app/views/artists/_unluv_form.html.erb
+++ b/app/views/artists/_unluv_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(current_fan.luvs.find_by(artist_id: @current_fan),
+<%= form_for(current_fan.luvs.find_by(artist: @artist),
  		html: { method: :delete }) do |f| %>
-<%= f.submit "THANK YOU  ♥", class: "btn" %>
+<%= f.submit "THANK YOU!  ♥", class: "btn luv_btn" %>
 <% end %>
