--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -10,9 +10,14 @@
     <div class="col-xs-12 col-md-6">
       <p class="artist-title"><%= @artist.name %></p>
 
+      <% if current_fan %>
+        <% if current_fan.luvs?(@artist)%>
+          <%= render 'unluv_form' %>
+        <% else %>
+          <%= render 'luv_form' %>
+        <%end%>
+      <%end%>
 
-
-      <%= render 'luv_form' if current_fan && !current_fan.luvs(@artist.id)%>
 
 
       <p class="artist-description"><%= @artist.description %></p>
