--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -156,7 +156,7 @@
     <div class="col-xs-6 col-md-3">
       <div class="note">
 
-        <h4>Brunch aesthetic next level banjo.</h4>
+        <h4>Brunch aesthetic next level banjo</h4>
         <p>Aesthetic bitters sustainable green juice. Artisan kogi vinyl banjo quinoa forage franzen kinfolk ethical try-hard, you probably haven't heard of them put a bird on it gastropub before they sold out. </p>
         <p><a class="note_rm" href="#">Read more <i class="fa fa-caret-right"></i></a></p>
 
