--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -149,11 +149,20 @@
 
 <div class="container-fluid">
   <div class="row">
+
     <div class="col-xs-6 col-md-3">
       <div class="note">
 
-        <h4>Madonna on Social Media – All the pictures and videos!</h4>
-        <p>Here's an overview of all the pictures and videos that have been posted on Madonna's official Instagram account and other social media. 10 March 2016 Clown Squad #tearsofaclown This Clown ... </p>
+        <h4>New exclusive merchandise in the store:</h4>
+        <p>There's some new merch in the store for our best fans, check out what we've got:</p>
+        <ul class="news">
+          <li>A Super Awesome Shirt</li>
+          <li>Limited Edition Red Vinyl</li>
+          <li>A Ton Of New Stickers</li>
+          <li>Gnarly Coaster Set</li>
+        </ul><br>
+          <p>Hurry to the store before they're all snatched up!</p>
+
         <p><a class="note_rm" href="#">Read more <i class="fa fa-caret-right"></i></a></p>
 
       </div>
@@ -162,8 +171,8 @@
     <div class="col-xs-6 col-md-3">
       <div class="note">
 
-        <h4>Madonna Mania is about to hit Melbourne on Friday March 11th</h4>
-        <p>Just Like A Prayer, Chapel Off Chapel will take you there… to celebrate the Queen of Pop’s arrival in Melbourne after 23 years with a pre-show party and everybody is invited!</p>
+        <h4>Pitchfork reviews the latest album:</h4>
+        <p>Wayfarers distillery shoreditch craft beer, forage kinfolk  post-ironic fashion axe food truck helvetica offal. Next level health goth shoreditch normcore cold-pressed street art, godard whatever tofu 3 wolf moon wolf plaid everyday carry freegan you probably haven't heard of them. Bitters hoodie beard, selfies poutine tacos pug thundercats. Pabst you probably haven't heard of them ... </p>
         <p><a class="note_rm" href="#">Read more <i class="fa fa-caret-right"></i></a></p>
 
       </div>
@@ -172,8 +181,8 @@
     <div class="col-xs-6 col-md-3">
       <div class="note">
 
-        <h4>Possible song choice for the unique MADONNA: TEARS OF A CLOWN fan show</h4>
-        <p>The unique fan show MADONNA: TEARS OF A CLOWN will fuse music, art and comedy tomorrow at Melbourne’s historic Forum Theatre! Madonna and her crew have been rehearsing for the past two days and here are some of the songs that were overheard by fans outside the venue…</p>
+        <h4>An update from the road:</h4>
+        <p>Yuccie hammock YOLO pitchfork, ramps cray whatever. Brunch intelligentsia twee pug hammock, bitters beard church-key selfies banjo. You probably haven't heard of them semiotics helvetica yuccie quinoa selvage, hella portland. man braid hashtag keffiyeh, cronut flannel literally. Man braid gastropub marfa street art, semiotics williamsburg crucifix retro +1 lomo cred ...</p>
         <p><a class="note_rm" href="#">Read more <i class="fa fa-caret-right"></i></a></p>
 
       </div>
@@ -182,8 +191,8 @@
     <div class="col-xs-6 col-md-3">
       <div class="note">
 
-        <h4>Japanese MDNA Skin interview with Madonna about the secret of beauty</h4>
-        <p>BS Fuiji’s ANSWERS showed a new Madonna interview for the promotion of her skincare line, MDNA Skin, where Madonna talked about the creative process behind MDNA Skin and the secret of beauty!</p>
+        <h4>Fan-only US tour presale tickets up soon:</h4>
+        <p>Fap dreamcatcher messenger bag wolf drinking vinegar vinyl, sartorial viral plaid keffiyeh kale chips forage bushwick poutine. Authentic you probably haven't heard of them health goth echo park post-ironic. Venmo master cleanse stumptown, sartorial freegan austin fap. Williamsburg godard wayfarers fingerstache. Williamsburg bicycle rights raw denim brooklyn.</p>
         <p><a class="note_rm" href="#">Read more <i class="fa fa-caret-right"></i></a></p>
 
       </div>
